@@ -1,7 +1,7 @@
 COPYRIGHT STATUS OF pqR.
  
 The modifications made to the source of R-2.15.0 to create pqR are
-Copyright (C) 2013, 2014, 2015, 2016 by Radford M. Neal.
+Copyright (C) 2013, 2014, 2015, 2016, 2017 by Radford M. Neal.
 
 The library in src/extra/sggc is Copyright (C) 2016 Radford M. Neal,
 and licensed under GPL2 or later.
